tests/neg-custom-args/erased/erased-implicit.scala
object Test {

  fun // error

  def fun(implicit a: Double): Int = 42

  erased implicit def doubleImplicit: Double

}
